# FLY.AI

./: .env  .gitignore  DOCKER_SHORTCUTS.md  Dockerfile  INFRASTRUCTURE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  legacy  logs  mutmut_config.py  pyproject.toml  setup.cfg
legacy/: .gitignore  .pre-commit-config.yaml  .pydocstyle  .ruffignore  Dockerfile.fly  README.md  docker-compose.fly.yml  git_to_txt.py  main.py  playgroung.ipynb  pyproject.toml  pyrightconfig.json  requirements.in  requirements_windows.in  setup_env.py
legacy/application/dtos/: company_accounts_series_dto.py  company_facets_dto.py  company_ratios_frame_dto.py  company_search_dto.py
legacy/application/mappers/: company_data_merger.py
legacy/application/ports/: config_port.py  uow_port.py
legacy/application/processors/: company_detail_processor.py  entry_cleaner.py  filter_builder.py  financial_report_processor.py
legacy/application/services/: __init__.py  cache_ratios_service.py
legacy/application/usecases/: companies_eligible.py  sync_nsd.py  sync_stock_quote.py
legacy/application/utils/: __init__.py
legacy/bcb_series/application/dtos/: account_series_dto.py  company_search_result_dto.py
legacy/bcb_series/application/mappers/: __init__.py  company_data_mapper.py
legacy/bcb_series/domain/: __init__.py
legacy/bcb_series/legacy/: .gitignore  main.py
legacy/domain/: exceptions.py
legacy/domain/dtos/: __init__.py  company_eligible_dto.py  stock_quote_dto.py  sync_results_dto.py  worker_result_dto.py
legacy/domain/ports/: __init__.py  cache_ratios_port.py  repository_account_series_port.py  repository_base_port.py  repository_company_data_port.py  repository_statements_fetched_port.py  repository_stock_quote_port.py  scraper_company_data_port.py  scraper_statements_raw_port.py
legacy/domain/services/: valid_company_rules.py
legacy/domain/value_objects/: account_code.py  search_filter_tree.py
legacy/infrastructure/adapters/: datacleaner_adapter.py  engine_setup.py
legacy/infrastructure/cache/: __init__.py
legacy/infrastructure/config/: __init__.py  cache.py  config_adapter.py  database.py  domain.py  exchange_api.py  fly_settings.py  referers.json  repository.py  scraping.py  statements.py  worker_pool.py
legacy/infrastructure/factories/: datacleaner_factory.py
legacy/infrastructure/http/: affinity_http_client.py  backoff.py  circuit_breaker.py  rate_limiter.py
legacy/infrastructure/logging/: __init__.py  context_tracker.py  logger_adapter.py  progress_formatter.py
legacy/infrastructure/models/: account_series_model.py  base_model.py  company_data_model.py  stock_quote_model.py
legacy/infrastructure/repositories/: repository_account_series.py  repository_company_data.py  repository_nsd.py  repository_statements_fetched.py  repository_statements_raw.py
legacy/infrastructure/scrapers/: __init__.py  scraper_company_data.py  scraper_nsd.py  scraper_statements_raw.py  scraper_stock_quote.py
legacy/infrastructure/utils/: __init__.py  file.py  id_generator.py  metrics_collector.py  normalization.py
legacy/legacy/: main background.py
legacy/legacy/application/: __init__.py
legacy/legacy/domain/: __init__.py
legacy/legacy/infrastructure/: __init__.py  factories.py
legacy/legacy/legacy_original/: README.md  code style manual.md
legacy/legacy/presentation/: __init__.py  cli.py  cli_old.py
legacy/legacy/tests/: conftest.py
legacy/presentation/backend/: api.py
legacy/presentation/controllers/: filter_presets.py
legacy/presentation/frontend/: FLY DOM.html  package-lock.json
legacy/tests/domain/: test_search_filter_tree.py
(+485 files in other folders)
