[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fly"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "pre-commit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings --cov=fly --cov-report=term-missing"

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = ["legacy/**"]

[tool.ruff.format]
exclude = ["legacy/**"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
match-dir = "application"
